[gd_scene load_steps=10 format=2]

[ext_resource path="res://code/start_game.gd" type="Script" id=1]
[ext_resource path="res://art/huper123/ATMK_main_menu_colour_v2.jpg" type="Texture" id=2]
[ext_resource path="res://art/fonts/Pacifico-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0.0901961, 0.662745, 0.192157, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="start_game" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="start" type="Label" parent="CanvasLayer/TextureRect"]
margin_left = 29.0
margin_top = 168.0
margin_right = 151.0
margin_bottom = 349.0
rect_rotation = -25.4178
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"

[node name="Button" type="Button" parent="CanvasLayer/TextureRect/start"]
light_mask = 0
margin_left = -5.91949
margin_top = 17.1161
margin_right = 134.081
margin_bottom = 73.1161
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="CanvasLayer/TextureRect/start/Button" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TextureRect/start/Button" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TextureRect/start/Button" to="." method="_on_start_pressed"]
